[gd_scene load_steps=4 format=3 uid="uid://be6dxmx5pqeoq"]

[ext_resource type="Script" uid="uid://dm5kek0bktmru" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://h0ngykfdybl1" path="res://scenes/settings.tscn" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://bm0wduapwguor" path="res://assets/main_menu.webp" id="3_bqqt6"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="settings" parent="." instance=ExtResource("2_ekxnf")]
visible = false
offset_left = 266.0
offset_top = 104.0
offset_right = 266.0
offset_bottom = 104.0

[node name="main_screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1148.0
offset_bottom = 634.0

[node name="MainMenu" type="Sprite2D" parent="main_screen"]
scale = Vector2(1.125, 0.423828)
texture = ExtResource("3_bqqt6")
centered = false

[node name="Title" type="RichTextLabel" parent="main_screen"]
modulate = Color(0.0656706, 0.866503, 0, 1)
layout_mode = 0
offset_left = 267.0
offset_top = 97.0
offset_right = 874.0
offset_bottom = 176.0
theme_override_font_sizes/normal_font_size = 50
text = "Frontier of the Forsaken"

[node name="Play" type="Button" parent="main_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.5
offset_top = -43.0
offset_right = 223.5
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="Options" type="Button" parent="main_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.5
offset_top = 25.0
offset_right = 223.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
text = "Options	"

[node name="quit" type="Button" parent="main_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.5
offset_top = 100.0
offset_right = 223.5
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
text = "quit"

[connection signal="settings_closed" from="settings" to="." method="_on_settings_settings_closed"]
[connection signal="button_down" from="main_screen/Play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="main_screen/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="main_screen/quit" to="." method="_on_quit_button_down"]
